# np_struct

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yml
examples/: ex_packets.py  ex_structures.py  ldarray.ipynb  structures.ipynb  template_interface.py
np_struct/: __init__.py  bitfields.py  fields.py  ldarray.py  structures.py  transfer.py  utils.py
packets34/: __init__.py  loopback.py  packets.py  structures.py  visa_interface.py
pktcomm/: __init__.py  comm.py  loopback.py  packets.py  serial_interface.py  socket_interface.py  structures.py
structures/: __init__.py  fields.py  interfaces.py  ldarray.py  packets.py  structures.py  transfer.py
test/: loopback.py  test_bitfields.py  test_interface.py  test_packets.py  test_variable_len.py
test/variable_length/: test_interface.py  test_packets.py
tests/: simple_server.py  test_interface.py  test_ldarray.py  test_packets.py  test_transfers.py  test_variable_len.py
