[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np-struct"
version = "0.0.4"
description = "Interface for NumPy structured arrays"
readme = "README.md"
authors = [{ name = "Rick Lyon", email = "rlyon14@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["numpy", "structured array", "struct"]
dependencies = [
    "numpy",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "python-dateutil", "parameterized", "bumpversion"]

[tool.setuptools.packages.find]
include = ["np_struct"]

[project.urls]
repository = "https://github.com/ricklyon/np_struct"

[bumpversion]
current_version = "0.0.4"
commit = True
tag = True

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"
