[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "np-struct"
version = "0.0.4"
description = "Interface for NumPy structured arrays"
readme = "README.md"
authors = [{ name = "Rick Lyon", email = "rlyon14@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["numpy", "structured array", "struct"]
dependencies = [
    "numpy",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "python-dateutil", "parameterized", "bumpversion"]

[tool.setuptools.packages.find]
include = ["np_struct"]

[project.urls]
repository = "https://github.com/ricklyon/np_struct"

[tool.bumpversion]
current_version = "1.2.3"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true

[tool.bumpversion.parts.major]
first_value = 0

[tool.bumpversion.parts.minor]
first_value = 0

[tool.bumpversion.parts.patch]
first_value = 0

[[tool.bumpversion.files]]
filename = "pyproject.toml"